@@ -6,6 +6,7 @@ Version 2.1.182
     Added some safety so that mcMMO automatic save interval is never more frequent than 1 minute
     Removed a few silent exceptions for scoreboards & mcMMO
     Added warning about UltraPermissions to mcMMO
+    Fixed a potential NPE in McMMOPlayerExperienceEvent
 
 Version 2.1.181
     mcMMO no longer pointlessly tries to check for missing UUIDs for FlatFile database
